[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/VCR.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/gui.gd" type="Script" id=2]

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="spawnCubeButton" type="Button" parent="."]
margin_left = 344.0
margin_top = 232.0
margin_right = 466.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 1 )
text = "Spawn Cube"

[node name="MusicButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 8.0
margin_right = 470.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 1 )
text = "Music OFF"

[node name="deleteAllButton" type="Button" parent="."]
margin_left = 344.0
margin_top = 192.0
margin_right = 466.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 1 )
text = "Delete All"

[node name="CubesTitle" type="Label" parent="."]
margin_left = 8.0
margin_top = 240.0
margin_right = 86.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 1 )
text = "Cubes:"

[node name="CubesCount" type="Label" parent="."]
margin_left = 84.0
margin_top = 240.0
margin_right = 113.0
margin_bottom = 261.0
custom_colors/font_color = Color( 0.0784314, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
